--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -8,10 +8,21 @@ img {
 }
 
 body {
-//   background: url(back.jpg);
-//   background-size: contain;
-    overflow-y:hidden;
+  background: url(back.jpg) top center no-repeat;
+  background-size: cover;
+  overflow-y:hidden;
 }
+
+/* Style for our header texts
+* --------------------------------------- */
+h1{
+  font-size: 5em;
+  font-family: arial,helvetica;
+  color: #fff;
+  margin:0;
+  padding:0;
+}
+
 
 //Navigation Links
 #header {
@@ -90,6 +101,62 @@ section {
   margin-top: 20px;
 }
 
+
+// Event Show Page -- Scrollable Divs
+
+
+	/* Centered texts in each section
+	* --------------------------------------- */
+	// .section{
+	// 	padding: 5px;
+	// 	overflow: scroll;
+	// 	overflow-y: hidden;
+	// }
+
+  .scrollable-element{
+           height: 600px;
+           width: 100%;
+           overflow-y: scroll;
+           margin: 0 auto;
+ }
+
+ .box1{
+     display: block;
+     background:#7BAABE;
+     margin: 20px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+		 border-radius: 0.5%;
+ }
+
+ .box2{
+     display: block;
+     background: #4BBFC3;
+     margin: 20px;
+     padding: 20px;
+		 border-radius: 0.5%;
+     align-items: center;
+     justify-content: center;
+ }
+
+ .box3{
+     display: block;
+    //  flex-direction: row;
+     align-items: center;
+    //  justify-content: space-around;
+    //  flex-wrap: wrap;
+     background: #1bbc9b;
+     margin: 20px;
+     padding: 20px;
+		 border-radius: 0.5%;
+ }
+
+.avatar-img {
+  max-height: 80px;
+  border-radius: 10%;
+  // margin: 10px;
+}
+
 // For images in the event feed page #TODO - Remove
 .evt-feed-img {
   height: 189px;
@@ -118,13 +185,10 @@ main {
 }
 
 // For images in the event show page
-.evt-img {
-  height: 189px;
-}
-
-#no-image {
-  color: black;
-}
+// #evt-img {
+//   max-height: 200px;
+//   object-fit: contain;
+// }
 
 /*Footer can be included in the future*/
 /*#footer{
