--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,96 +1,140 @@
-
-<div class="container">
+<!-- <div class="container ">
   <div class="row">
-    <div class="col-12 color-row" >
+    <div class="col-12" > -->
 
-      <div class="col-12">
-        <%= image_tag("#{@user.picture_url}") %>
+<style >
+
+.center-nav{
+  width: 88%;
+  display: inline-flex;
+}
+
+.box4{
+    display: block;
+   //  background:#7BAABE;
+    margin: 20px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+    border-radius: 0.5%;
+}
+
+.box5{
+    display: block;
+    align-items: center;
+   // logo yellow
+   //  background: #E7A820;
+   // logo green
+    background: #36BB90;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 0.5%;
+}
+
+</style>
+
+<div id="fullpage">
+    <div class="section active" id="section0">
+      <div class="scrollable-element">
+        <br>
+        <br>
+
+      <!-- <div class="col-12"> -->
+      <div class="box5">
+        <div>
+          <%= image_tag("#{@user.picture_url}") %>
+        </div>
+
+        <div>
+          <p><strong><%= @user.full_name %></strong></p>
+          <% if @user.id == current_user.id %>
+          <%= link_to 'Edit Profile', edit_user_path(@user) %>
+          <% end %>
+          <br>
+          <p><%= "#{friend_gen} Friends" %></p>
+        </div>
+
       </div>
 
-      <p><strong>Name:</strong> <%= @user.full_name %></p>
-      <% if @user.id == current_user.id %>
-      <%= link_to 'Edit Profile', edit_user_path(@user) %>
-      <% end %>
+      <div class="box4">
 
+        <div class="bd-example bd-example-tabs" role="tabpanel">
+          <ul class="nav nav-tabs center-nav" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true">Attending</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false">History</a>
+            </li>
 
-      <p><%= "#{friend_gen} Friends" %></p>
-    </div>
-  </div>
-</div>
+          </ul>
 
+          <div class="tab-content" id="myTabContent">
+            <div role="tabpanel" class="tab-pane fade active show" id="home" aria-labelledby="home-tab" aria-expanded="true">
+              <% @all_current_events.sort_by(&:date).each do |current_event| %>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 color-row" >
 
-<div class="bd-example bd-example-tabs" role="tabpanel">
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true">Attending</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false">History</a>
-    </li>
+                      <div class="container">
+                        <%= link_to event_path(current_event.id) do %>
+                          <div class="row evt-feed-img">
+                            <% if current_event.photos.exists? %>
+                              <%= image_tag current_event.photos.first.attachment_url, :class => 'img-responsive'  %>
+                            <% else %>
+                                Placeholder Image
+                            <% end %>
+                              <p><%= current_event.title %></p>
+                              <p><%= time_formatter(current_event.date) %></p>
+                              <p><%= current_event.location %></p>
+                              <p><%= current_event.creator.full_name %></p>
+                          </div>
+                        <% end %>
+                      </div>
 
-  </ul>
-
-  <div class="tab-content" id="myTabContent">
-    <div role="tabpanel" class="tab-pane fade active show" id="home" aria-labelledby="home-tab" aria-expanded="true">
-      <% @all_current_events.sort_by(&:date).each do |current_event| %>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 color-row" >
-
-              <div class="container">
-                <%= link_to event_path(current_event.id) do %>
-                  <div class="row evt-feed-img">
-                    <% if current_event.photos.exists? %>
-                      <%= image_tag current_event.photos.first.attachment_url %>
-                    <% else %>
-                        Placeholder Image
-                    <% end %>
-                      <p><%= current_event.title %></p>
-                      <p><%= time_formatter(current_event.date) %></p>
-                      <p><%= current_event.location %></p>
-                      <p><%= current_event.creator.full_name %></p>
+                    </div>
                   </div>
-                <% end %>
-              </div>
+                </div>
+              <% end %>
 
             </div>
-          </div>
-        </div>
-      <% end %>
-
-    </div>
 
 
-    <div class="tab-pane fade" id="History" role="tabpanel" aria-labelledby="History-tab" aria-expanded="false">
-      <% @all_past_events.sort_by(&:date).reverse.each do |past_event| %>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 color-row" >
+            <div class="tab-pane fade" id="History" role="tabpanel" aria-labelledby="History-tab" aria-expanded="false">
+              <% @all_past_events.sort_by(&:date).reverse.each do |past_event| %>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 color-row" >
 
-              <div class="container">
-                <%= link_to event_path(past_event.id) do %>
-                  <div class="row evt-feed-img">
-                    <% if past_event.photos.exists? %>
-                      <%= image_tag past_event.photos.first.attachment_url %>
-                    <% else %>
-                        Placeholder Image
-                    <% end %>
-                      <p><%= past_event.title %></p>
-                      <p><%= time_formatter(past_event.date) %></p>
-                      <p><%= past_event.location %></p>
-                      <p><%= past_event.creator.full_name %></p>
+                      <div class="container">
+                        <%= link_to event_path(past_event.id) do %>
+                          <div class="row evt-feed-img">
+                            <% if past_event.photos.exists? %>
+                              <%= image_tag past_event.photos.first.attachment_url %>
+                            <% else %>
+                                Placeholder Image
+                            <% end %>
+                              <p><%= past_event.title %></p>
+                              <p><%= time_formatter(past_event.date) %></p>
+                              <p><%= past_event.location %></p>
+                              <p><%= past_event.creator.full_name %></p>
+                          </div>
+                        <% end %>
+                      </div>
+
+                    </div>
                   </div>
-                <% end %>
-              </div>
+                </div>
+              <% end %>
 
             </div>
+
+
+
           </div>
         </div>
-      <% end %>
+
+      </div>
 
     </div>
-
-
-
   </div>
 </div>
