--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,18 +11,16 @@
 
 .box4{
     display: block;
-   //  background:#7BAABE;
-    margin: 20px;
-    padding-top: 5px;
-    padding-bottom: 20px;
+    margin: 5px;
+    padding-top: 0px;
     border-radius: 0.5%;
 }
 
 .box5{
     display: block;
-    align-items: center;
+    align-items: left;
    // logo yellow
-   //  background: #E7A820;
+   /*//  background: #E7A820;*/
    // logo green
     background: #36BB90;
     margin: 20px;
@@ -38,10 +36,9 @@
         <br>
         <br>
 
-      <!-- <div class="col-12"> -->
       <div class="box5">
         <div>
-          <%= image_tag("#{@user.picture_url}") %>
+          <%= image_tag("#{@user.picture_url}", :class => "avatar-img") %>
         </div>
 
         <div>
@@ -59,10 +56,10 @@
 
         <div class="bd-example bd-example-tabs" role="tabpanel">
           <ul class="nav nav-tabs center-nav" id="myTab" role="tablist">
-            <li class="nav-item">
+            <li class="nav-item col-6">
               <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true">Attending</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-6">
               <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false">History</a>
             </li>
 
@@ -73,11 +70,11 @@
               <% @all_current_events.sort_by(&:date).each do |current_event| %>
                 <div class="container">
                   <div class="row">
-                    <div class="col-12 color-row" >
+                    <div class="col-12" >
 
                       <div class="container">
                         <%= link_to event_path(current_event.id) do %>
-                          <div class="row evt-feed-img">
+                          <div class="row center-cropped">
                             <% if current_event.photos.exists? %>
                               <%= image_tag current_event.photos.first.attachment_url, :class => 'img-responsive'  %>
                             <% else %>
@@ -103,11 +100,11 @@
               <% @all_past_events.sort_by(&:date).reverse.each do |past_event| %>
                 <div class="container">
                   <div class="row">
-                    <div class="col-12 color-row" >
+                    <div class="col-12" >
 
                       <div class="container">
                         <%= link_to event_path(past_event.id) do %>
-                          <div class="row evt-feed-img">
+                          <div class="row center-cropped">
                             <% if past_event.photos.exists? %>
                               <%= image_tag past_event.photos.first.attachment_url %>
                             <% else %>
