--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,11 +4,11 @@
     <div class="navbar-logo">
       <% if current_user %>
         <%= link_to events_path do %>
-          <%= image_tag "groop-white.png", :class => "logo_img" %>
+          <%= image_tag "groop-logo.png", :class => "logo_img" %>
         <% end %>
       <% else %>
         <%= link_to root_path do %>
-          <%= image_tag "groop-white.png", :class => "logo_img" %>
+          <%= image_tag "groop-logo.png", :class => "logo_img" %>
         <% end %>
       <% end %>
     </div>
