--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,7 +1,7 @@
 <% if current_user %>
 
   <%= link_to new_event_path do %>
-    <li><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></li>
+    <li><i class="fa fa-calendar-plus-o fa-2x" aria-hidden="true"></i></a></li>
   <% end %>
 
   <%= link_to user_path(current_user.id) do %>
