--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,66 +1,33 @@
-<!-- <div class="container ">
-  <div class="row">
-    <div class="col-12" > -->
-
-<style >
-
-.center-nav{
-  width: 88%;
-  display: inline-flex;
-}
-
-.box4{
-    display: block;
-    margin: 5px;
-    padding-top: 0px;
-    border-radius: 0.5%;
-}
-
-.box5{
-    display: block;
-    align-items: left;
-   // logo yellow
-   /*//  background: #E7A820;*/
-   // logo green
-    background: #36BB90;
-    margin: 20px;
-    padding: 20px;
-    border-radius: 0.5%;
-}
-
-</style>
-
 <div id="fullpage">
     <div class="section active" id="section0">
       <div class="scrollable-element">
         <br>
-        <br>
 
-      <div class="box5">
+      <div class="box3">
         <div>
           <%= image_tag("#{@user.picture_url}", :class => "avatar-img") %>
         </div>
 
         <div>
-          <p><strong><%= @user.full_name %></strong></p>
+          <p><h4><%= @user.full_name %></h4></p>
           <% if @user.id == current_user.id %>
-          <%= link_to 'Edit Profile', edit_user_path(@user) %>
+          <%= link_to 'Edit Profile', edit_user_path(@user), :class => 'btn btn-primary' %>
           <% end %>
           <br>
-          <p><%= "#{friend_gen} Friends" %></p>
+          <p><h6><%= "#{friend_gen} Friends" %></h6></p>
         </div>
 
       </div>
 
-      <div class="box4">
+      <div class="box1">
 
         <div class="bd-example bd-example-tabs" role="tabpanel">
           <ul class="nav nav-tabs center-nav" id="myTab" role="tablist">
             <li class="nav-item col-6">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true">Attending</a>
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true"><strong>Attending</strong></a>
             </li>
             <li class="nav-item col-6">
-              <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false">History</a>
+              <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false"><strong>History</strong></a>
             </li>
 
           </ul>
@@ -72,18 +39,20 @@
                   <div class="row">
                     <div class="col-12" >
 
-                      <div class="container">
+                      <div class="container-fluid evt-view">
                         <%= link_to event_path(current_event.id) do %>
-                          <div class="row center-cropped">
+                          <div class="row center-cropped evt-img">
                             <% if current_event.photos.exists? %>
                               <%= image_tag current_event.photos.first.attachment_url, :class => 'img-responsive'  %>
                             <% else %>
                                 Placeholder Image
                             <% end %>
-                              <p><%= current_event.title %></p>
-                              <p><%= time_formatter(current_event.date) %></p>
-                              <p><%= current_event.location %></p>
-                              <p><%= current_event.creator.full_name %></p>
+                            <div class="evt-details">
+                              <p><h5><%= current_event.title %></h5></p>
+                              <p><strong><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(current_event.date) %></strong></p>
+                              <p><strong><i class="fa fa-map-marker" aria-hidden="true"></i><%= current_event.location %></strong></p>
+                              <p><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= current_event.creator.full_name %></strong></p>
+                            </div>
                           </div>
                         <% end %>
                       </div>
@@ -102,18 +71,20 @@
                   <div class="row">
                     <div class="col-12" >
 
-                      <div class="container">
+                      <div class="container-fluid evt-view">
                         <%= link_to event_path(past_event.id) do %>
-                          <div class="row center-cropped">
+                          <div class="row center-cropped evt-img">
                             <% if past_event.photos.exists? %>
                               <%= image_tag past_event.photos.first.attachment_url %>
                             <% else %>
                                 Placeholder Image
                             <% end %>
-                              <p><%= past_event.title %></p>
-                              <p><%= time_formatter(past_event.date) %></p>
-                              <p><%= past_event.location %></p>
-                              <p><%= past_event.creator.full_name %></p>
+                            <div class="evt-details">
+                              <p><h5><%= past_event.title %></h5></p>
+                              <p><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(past_event.date) %></p>
+                              <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= past_event.location %></p>
+                              <p><i class="fa fa-user-circle" aria-hidden="true"></i><%= past_event.creator.full_name %></p>
+                          </div>
                           </div>
                         <% end %>
                       </div>
