--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,118 +1,134 @@
-<div class="bd-example bd-example-tabs" role="tabpanel">
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true">Attending</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-expanded="false">Friends Upcoming</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false">History</a>
-    </li>
+<div id="fullpage">
+    <div class="section active" id="section0">
+      <div class="scrollable-element">
 
-  </ul>
+    <div class="box1">
 
-  <div class="tab-content" id="myTabContent">
-    <div role="tabpanel" class="tab-pane fade active show" id="home" aria-labelledby="home-tab" aria-expanded="true">
-      <% @all_attending_events.sort_by(&:date).each do |all_attending_event| %>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 color-row" >
+      <div class="bd-example bd-example-tabs" role="tabpanel">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-expanded="true"><strong>Attending</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-expanded="false"><strong>Friends Upcoming</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="History-tab" data-toggle="tab" href="#History" role="tab" aria-controls="History" aria-expanded="false"><strong>History</strong></a>
+        </li>
 
-              <div class="container">
-                <%= link_to event_path(all_attending_event.id) do %>
-                  <div class="row evt-feed-img">
-                    <% if all_attending_event.photos.exists? %>
-                      <%= image_tag all_attending_event.photos.first.attachment_url %>
-                    <% else %>
-                        Placeholder Image
+      </ul>
+
+      <div class="tab-content" id="myTabContent">
+        <div role="tabpanel" class="tab-pane fade active show" id="home" aria-labelledby="home-tab" aria-expanded="true">
+          <% @all_attending_events.sort_by(&:date).each do |all_attending_event| %>
+            <div class="container">
+              <div class="row">
+                <div class="col-12" >
+
+                  <div class="container-fluid evt-view">
+                    <%= link_to event_path(all_attending_event.id) do %>
+                      <div class="row center-cropped evt-img">
+                        <% if all_attending_event.photos.exists? %>
+                          <%= image_tag all_attending_event.photos.first.attachment_url %>
+                        <% else %>
+                            Placeholder Image
+                        <% end %>
+                        <div class="evt-details">
+                          <p><h5><%= all_attending_event.title %></h5></p>
+                          <p><strong><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(all_attending_event.date) %></strong></p>
+                          <p><strong><i class="fa fa-map-marker" aria-hidden="true"></i><%= all_attending_event.location %></strong></p>
+                          <p><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= all_attending_event.creator.full_name %></strong></p>
+                        </div>
+                      </div>
                     <% end %>
-                      <p><%= all_attending_event.title %></p>
-                      <p><%= time_formatter(all_attending_event.date) %></p>
-                      <p><%= all_attending_event.location %></p>
-                      <p><%= all_attending_event.creator.full_name %></p>
                   </div>
-                <% end %>
-              </div>
 
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-
-
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
-
-      <% @friend_events.sort_by(&:date).each do |friend_event| %>
-      <div class="container">
-        <div class="row">
-          <div class="col-12 color-row" >
-
-            <div class="container">
-              <%= link_to event_path(friend_event.id) do %>
-                <div class="row friend-evt-feed-img">
-                  <% if friend_event.photos.exists? %>
-                    <%= image_tag friend_event.photos.first.attachment_url %>
-                  <% else %>
-                      Placeholder Image
-                  <% end %>
-                    <p><%= friend_event.title %></p>
-                    <p><%= time_formatter(friend_event.date) %></p>
-                    <p><%= friend_event.location %></p>
-                    <p><%= friend_event.creator.full_name %></p>
-                </div>
-               <% end %>
-            </div>
-
-            <div class="container">
-              <div class="row test-border">
-                <div class="col-12">
-                    <%= link_to 'Join', user_events_path(:user_event => {event_id: "#{friend_event.id}", user_id: current_user.id}), method: :post %>
                 </div>
               </div>
             </div>
-
-          </div>
+          <% end %>
         </div>
-      </div>
 
-      <% end %>
 
-    </div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
 
-    <div class="tab-pane fade" id="History" role="tabpanel" aria-labelledby="History-tab" aria-expanded="false">
-      <% @past_events.sort_by(&:date).reverse.each do |past_event| %>
+          <% @friend_events.sort_by(&:date).each do |friend_event| %>
+          <div class="container">
+            <div class="row">
+              <div class="col-12" >
 
-      <div class="container">
-        <div class="row">
-          <div class="col-12 color-row" >
-
-            <div class="container">
-              <%= link_to event_path(past_event.id) do %>
-                <div class="row evt-feed-img">
-                  <% if past_event.photos.exists? %>
-                    <%= image_tag past_event.photos.first.attachment_url %>
-                  <% else %>
-                      Placeholder Image
-                  <% end %>
-                    <p><%= past_event.title %></p>
-                    <p><%= time_formatter(past_event.date) %></p>
-                    <p><%= past_event.location %></p>
-                    <p><%= past_event.creator.full_name %></p>
+                <div class="container-fluid evt-view">
+                  <%= link_to event_path(friend_event.id) do %>
+                    <div class="row center-cropped evt-img">
+                      <% if friend_event.photos.exists? %>
+                        <%= image_tag friend_event.photos.first.attachment_url %>
+                      <% else %>
+                          Placeholder Image
+                      <% end %>
+                      <div class="evt-details">
+                        <p><h5><%= friend_event.title %></h5></p>
+                        <p><strong><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(friend_event.date) %></strong></p>
+                        <p><strong><i class="fa fa-map-marker" aria-hidden="true"></i><%= friend_event.location %></strong></p>
+                        <p><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= friend_event.creator.full_name %></strong></p>
+                      </div>
+                    </div>
+                   <% end %>
                 </div>
-              <% end %>
-            </div>
 
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-12">
+                        <%= link_to 'Join', user_events_path(:user_event => {event_id: "#{friend_event.id}", user_id: current_user.id}), method: :post %>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
           </div>
+
+          <% end %>
+
+        </div>
+
+        <div class="tab-pane fade" id="History" role="tabpanel" aria-labelledby="History-tab" aria-expanded="false">
+          <% @past_events.sort_by(&:date).reverse.each do |past_event| %>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-12" >
+
+                <div class="container-fluid evt-view">
+                  <%= link_to event_path(past_event.id) do %>
+                    <div class="row center-cropped evt-img">
+                      <% if past_event.photos.exists? %>
+                        <%= image_tag past_event.photos.first.attachment_url %>
+                      <% else %>
+                          Placeholder Image
+                      <% end %>
+                      <div class="evt-details">
+                        <p><h5><%= past_event.title %></h5></p>
+                        <p><strong><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(past_event.date) %></strong></p>
+                        <p><strong><i class="fa fa-map-marker" aria-hidden="true"></i><%= past_event.location %></strong></p>
+                        <p><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= past_event.creator.full_name %></strong></p>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <% end %>
+
         </div>
       </div>
-
-      <% end %>
+      </div>
 
     </div>
 
 
-
+    </div>
   </div>
 </div>
