--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -58,7 +58,7 @@
               <div class="col-12" >
 
                 <div class="container-fluid evt-view">
-                  <%= link_to event_path(friend_event.id) do %>
+                  <%= link_to event_path(friend_event.id), :id => 'evt-link' do %>
                     <div class="row center-cropped evt-img">
                       <% if friend_event.photos.exists? %>
                         <%= image_tag friend_event.photos.first.attachment_url %>
@@ -69,18 +69,13 @@
                         <p><h5><%= friend_event.title %></h5></p>
                         <p><strong><i class="fa fa-calendar" aria-hidden="true"></i><%= time_formatter(friend_event.date) %></strong></p>
                         <p><strong><i class="fa fa-map-marker" aria-hidden="true"></i><%= friend_event.location %></strong></p>
-                        <p><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= friend_event.creator.full_name %></strong></p>
+                        <p id="no-margin"><strong><i class="fa fa-user-circle" aria-hidden="true"></i><%= friend_event.creator.full_name %></strong></p>
                       </div>
                     </div>
                    <% end %>
-                </div>
-
-                <div class="container-fluid">
-                  <div class="row">
-                    <div class="col-12">
-                        <%= link_to 'Join', user_events_path(:user_event => {event_id: "#{friend_event.id}", user_id: current_user.id}), method: :post %>
-                    </div>
-                  </div>
+                   <div class="col-12 evt-feed-join">
+                       <h6><%= link_to 'Join', user_events_path(:user_event => {event_id: "#{friend_event.id}", user_id: current_user.id}), method: :post %></h6>
+                   </div>
                 </div>
 
               </div>
