--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Event</h1>
+<br>
+<br>
+<br>
+<br>
+<div class="box2 evt-form">
+
+<h3>New Event</h3>
 
 <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
+</div>
