--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,11 +1,16 @@
 
-<div class = "well">
-   <%= form_with(model: [@event, photo], local: true, html: { multipart: true }) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <%= f.label :attachment %>
-      <%= f.file_field :attachment %>
-      <%= f.hidden_field :event_id %>
-      <%= f.submit "Save", class: "btn btn-primary" %>
-   <% end %>
-</div>
+ <%= form_with(model: [@event, photo], local: true, html: { multipart: true }) do |f| %>
+
+    <strong><h5><%= f.label :name %></h5></strong>
+    <%= f.text_field :name %>
+    <br>
+    <br>
+
+    <strong><h5><%= f.label :attachment %></h5></strong>
+    <%= f.file_field :attachment %>
+    <br>
+    <%= f.hidden_field :event_id %>
+
+    <br>
+    <%= f.submit "Save", class: "btn btn-primary" %>
+  <% end %>
