--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Photo</h1>
+<br>
+<br>
+<br>
+<br>
+<div class="box2 evt-form">
+
+<h3>New Photo</h3>
 
 <%= render 'form', photo: @photo %>
 
-<%= link_to 'Back', event_photos_path %>
+</div>
