updates to index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,101 +1,40 @@
+<style>
 
-<!-- video background-->
-<!-- replace URLs with your video content URL-->
- <video id="video-background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-  <source src="http://ondrejsvestka.cz/video/silver-lining-video.webm" type="video/webm">
-  <source src="http://ondrejsvestka.cz/video/silver-lining-video.mp4" type="video/mp4">
-</video>
-<div class="overlay"></div>
-<div class="container">
-  <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a></p>
-  <h1 class="cursive">Groop coming soon..</h1>
-  <div class="mailing-list">
-    <div class="row">
-      <form class="form-inline">
-        <div class="form-group">
-          <label for="email" class="sr-only"></label>
-          <input type="email" placeholder="jane.doe@example.com" id="email" class="form-control transparent">
-        </div>
-        <button class="btn btn-danger">subscribe</button>
-      </form>
+.box5{
+    display: block;
+    margin: 0px;
+    background: #36BB90;
+}
+
+.box6{
+    display: block;
+    background: #E7A820;
+    margin: 0px;
+}
+
+
+</style>
+
+<div id="fullpage">
+    <div class="section active" id="section0">
+      <div class="scrollable-element">
+          <br>
+          <br>
+
+          <div class="box5">
+            Video here
+					</div>
+
+          <div class="box6">
+            <h2 >Who are we?</h2>
+            <p> Groop is a social media platform designed to increase your in-person interactions. </p>
+            <p> Be Social. Meet new friends. Create a groop! </p>
+          </div>
+
+
+          <div class="box7">
+          </div>
+
     </div>
   </div>
 </div>
-
-<section id="two">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-<div class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <p>&copy;2017 Your name/company goes here</p>
-      </div>
-      <div class="col-md-6">
-
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
- <!-- <div id="fullpage">
-    <div class="section " id="section0">
-        <h1>fullPage.js</h1>
-        <p>Continuous Scrolling Enabled</p>
-        <img src="imgs/fullPage.png" alt="fullPage" />
-    </div>
-    <div class="section active" id="section1">
-        <div class="slide" id="slide1">
-            <div class="intro">
-                <h1>Around the world scrolling</h1>
-                <p>Go to the first section and scroll up or to the last one and scroll down to see how it works.</p>
-            </div>
-        </div>
-        <div class="slide active" id="slide2">
-            <h1>Slide 2</h1>
-        </div>
-        <div class="slide" id="slide3">
-            <h1>Slide 3</h1>
-        </div>
-
-    </div>
-    <div class="section" id="section2">
-        <div class="intro">
-            <h1>Scroll Down</h1>
-            <p>And it will animate down to the first section</p>
-        </div>
-    </div>
-</div>  -->
