adds color and video to welcome page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,6 +27,13 @@ position: relative;
   background: #fdc846;
 }
 
+#section1{
+  background: red;
+}
+
+#section2{
+  background: orange;
+}
 
 
 </style>
@@ -58,8 +65,20 @@ position: relative;
 
     <div class="section" id="section1">
       <div class="intro">
-          <h1>Just use </h1>
-          <p>autoScrolling:false</p>
+        <div>
+          <i class="icon-user-follow text-primary"></i>
+          <h4>Create an account</h4>
+        </div>
+
+        <div>
+          <i class="icon-magnifier-add text-primary"></i>
+          <h4>Find old friends (or make new ones!) and invite them to your GROOP</h4>
+        </div>
+
+        <div>
+          <i class="icon-event text-primary"></i>
+          <h4> Create events, plan with friends, and broadcast your story!</h4S>
+        </div>
       </div>
     </div>
 
