added icons to homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
 
 #myVideo{
 width: 103%;
-top: -133px;
+top: -123px;
 left: -5px;
 position: relative;
 }
@@ -71,7 +71,7 @@ position: relative;
         </div>
 
         <div>
-          <i class="icon-magnifier-add text-primary"></i>
+          <i class="fa fa-search-plus" aria-hidden="true"></i>
           <h4>Find old friends (or make new ones!) and invite them to your GROOP</h4>
         </div>
 
