updates to last slide in homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
 
 #section2{
   font-size: 16px;
-  background: url(~/app/assets/bg-pattern.png), linear-gradient(to left, #F5A700, #F60060);
+  background: url(bg-pattern.png), linear-gradient(to left, #F5A700, #F60060);
   /*background-image: url(bg-pattern.png), linear-gradient(to left, #F5A700, #F60060);*/
 }
 
@@ -70,7 +70,6 @@
           <strong><h2 id="splash-txt">Who <br>Are We?</h2></strong>
         <br>
 				<h3> Groop is a social media platform designed to increase your in-person interactions. </h3>
-				<!-- <h4> Be Social. Meet new friends. Create a groop! </h4> -->
         </div>
     </div>
 
@@ -101,8 +100,11 @@
 
     <div class="section" id="section2">
         <div class="intro">
-            <h1>Just use </h1>
-            <p>autoScrolling:false</p>
+          <br>
+          <br>
+          <br>
+            <h2>Be Social. Meet new friends. Create a groop! </h2>
+            <%= image_tag('iphone-pic.png') %>
         </div>
     </div>
 </div>
