updates to form input style and event images

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -110,8 +110,12 @@ h1{
   font-size: 16px;
 }
 
-.evt-form .input{
-  min-width: 238px;
+// .evt-form .input{
+//   min-width: 150px;
+// }
+
+.form-control{
+  width: 85%;
 }
 
 // apply styles to HTML elements
